--- a/nginx-ingress-cel/restrict-ingress-paths/restrict-ingress-paths.yaml
+++ b/nginx-ingress-cel/restrict-ingress-paths/restrict-ingress-paths.yaml
@@ -3,19 +3,19 @@ kind: ClusterPolicy
 metadata:
   name: restrict-ingress-paths
   annotations:
-    policies.kyverno.io/title: Restrict NGINX Ingress path values 
-    policies.kyverno.io/category: Security, NGINX Ingress
+    policies.kyverno.io/title: Restrict NGINX Ingress path values in CEL expressions  
+    policies.kyverno.io/category: Security, NGINX Ingress in CEL 
     policies.kyverno.io/severity: high
     policies.kyverno.io/subject: Ingress
-    policies.kyverno.io/minversion: "1.6.0"
-    kyverno.io/kyverno-version: "1.6.0"
-    kyverno.io/kubernetes-version: "1.23"
+    policies.kyverno.io/minversion: "1.11.0"
+    kyverno.io/kyverno-version: "1.11.0"
+    kyverno.io/kubernetes-version: "1.26-1.27"
     policies.kyverno.io/description: >-
       This policy mitigates CVE-2021-25745 by restricting `spec.rules[].http.paths[].path` to safe values.
       Additional paths can be added as required. This issue has been fixed in NGINX Ingress v1.2.0. 
       Please refer to the CVE for details.
 spec:
-  validationFailureAction: enforce
+  validationFailureAction: Enforce
   rules:
     - name: check-paths
       match:
@@ -24,22 +24,14 @@ spec:
             kinds:
             - networking.k8s.io/v1/Ingress
       validate:
-        message: "spec.rules[].http.paths[].path value is not allowed"
-        deny:
-          conditions:
-            any:
-            - key: "{{ request.object.spec.rules[].http.paths[].path.contains(@,'/etc') }}"
-              operator: AnyIn
-              value: [true]
-            - key: "{{ request.object.spec.rules[].http.paths[].path.contains(@,'/var/run/secrets') }}"
-              operator: AnyIn
-              value: [true]
-            - key: "{{ request.object.spec.rules[].http.paths[].path.contains(@,'/root') }}"
-              operator: AnyIn
-              value: [true]
-            - key: "{{ request.object.spec.rules[].http.paths[].path.contains(@,'/var/run/kubernetes/serviceaccount') }}"
-              operator: AnyIn
-              value: [true]
-            - key: "{{ request.object.spec.rules[].http.paths[].path.contains(@,'/etc/kubernetes/admin.conf') }}"
-              operator: AnyIn
-              value: [true]
+        cel:
+          expressions:
+            - expression: >-
+                !has(object.spec.rules) ||
+                object.spec.rules.all(rule, !has(rule.http) || !has(rule.http.paths) ||
+                rule.http.paths.all(p, 
+                !p.path.contains('/etc') && !p.path.contains('/var/run/secrets') &&
+                !p.path.contains('/root') && !p.path.contains('/var/run/kubernetes/serviceaccount') &&
+                !p.path.contains('/etc/kubernetes/admin.conf')))
+              message: "spec.rules[].http.paths[].path value is not allowed"
+
