--- a/openshift-cel/disallow-deprecated-apis/disallow-deprecated-apis.yaml
+++ b/openshift-cel/disallow-deprecated-apis/disallow-deprecated-apis.yaml
@@ -3,12 +3,12 @@ kind: ClusterPolicy
 metadata:
   name: disallow-deprecated-apis
   annotations:
-    policies.kyverno.io/title: Disallow deprecated APIs
-    policies.kyverno.io/category: OpenShift
+    policies.kyverno.io/title: Disallow deprecated APIs in CEL expressions
+    policies.kyverno.io/category: OpenShift in CEL 
     policies.kyverno.io/severity: medium
-    kyverno.io/kyverno-version: 1.6.0
-    policies.kyverno.io/minversion: 1.6.0
-    kyverno.io/kubernetes-version: "1.20"
+    kyverno.io/kyverno-version: 1.11.0
+    policies.kyverno.io/minversion: 1.11.0
+    kyverno.io/kubernetes-version: "1.26-1.27"
     policies.kyverno.io/subject: ClusterRole,ClusterRoleBinding,Role,RoleBinding,RBAC
     policies.kyverno.io/description: >-
       OpenShift APIs are sometimes deprecated and removed after a few releases.
@@ -17,7 +17,7 @@ metadata:
       Note that checking for some of these resources may require modifying the Kyverno
       ConfigMap to remove filters.      
 spec:
-  validationFailureAction: enforce
+  validationFailureAction: Enforce
   background: true
   rules:
   - name: check-deprecated-apis
@@ -30,6 +30,9 @@ spec:
           - authorization.openshift.io/v1/Role
           - authorization.openshift.io/v1/RoleBinding
     validate:
-      message: >-
-        {{ request.object.apiVersion }}/{{ request.object.kind }} is deprecated.
-      deny: {}
+      cel:
+        expressions:
+          - expression: "false"
+            messageExpression: >-
+              object.apiVersion + '/' + object.kind + ' is deprecated.'
+
