--- a/psa-cel/add-psa-namespace-reporting/add-psa-namespace-reporting.yaml
+++ b/psa-cel/add-psa-namespace-reporting/add-psa-namespace-reporting.yaml
@@ -3,12 +3,12 @@ kind: ClusterPolicy
 metadata:
   name: add-psa-namespace-reporting
   annotations:
-    policies.kyverno.io/title: Add PSA Namespace Reporting
-    policies.kyverno.io/category: Pod Security Admission, EKS Best Practices
+    policies.kyverno.io/title: Add PSA Namespace Reporting in CEL expressions
+    policies.kyverno.io/category: Pod Security Admission, EKS Best Practices in CEL 
     policies.kyverno.io/severity: medium
-    kyverno.io/kyverno-version: 1.7.1
-    policies.kyverno.io/minversion: 1.6.0
-    kyverno.io/kubernetes-version: "1.24"
+    kyverno.io/kyverno-version: 1.11.0
+    policies.kyverno.io/minversion: 1.11.0
+    kyverno.io/kubernetes-version: "1.26-1.27"
     policies.kyverno.io/subject: Namespace
     policies.kyverno.io/description: >-
       This policy is valuable as it ensures that all namespaces within a Kubernetes 
@@ -22,7 +22,7 @@ metadata:
       organization's security practices and take appropriate action to rectify the 
       situation.
 spec:
-  validationFailureAction: audit
+  validationFailureAction: Audit
   background: true
   rules:
   - name: check-namespace-labels
@@ -32,8 +32,8 @@ spec:
           kinds:
             - Namespace
     validate:
-      message: This Namespace is missing a PSA label.
-      pattern:
-        metadata:
-          labels:
-            pod-security.kubernetes.io/*: "?*"
+      cel:
+        expressions:
+          - expression: "has(object.metadata.labels) && object.metadata.labels.exists(label, label.startsWith('pod-security.kubernetes.io/') && object.metadata.labels[label] != '')"
+            message: This Namespace is missing a PSA label.
+
