--- a/openshift-cel/disallow-jenkins-pipeline-strategy/disallow-jenkins-pipeline-strategy.yaml
+++ b/openshift-cel/disallow-jenkins-pipeline-strategy/disallow-jenkins-pipeline-strategy.yaml
@@ -3,17 +3,17 @@ kind: ClusterPolicy
 metadata:
   name: disallow-jenkins-pipeline-strategy
   annotations:
-    policies.kyverno.io/title: Disallow OpenShift Jenkins Pipeline Build Strategy 
-    policies.kyverno.io/category: OpenShift
+    policies.kyverno.io/title: Disallow OpenShift Jenkins Pipeline Build Strategy in CEL expressions
+    policies.kyverno.io/category: OpenShift in CEL 
     policies.kyverno.io/severity: medium
-    kyverno.io/kyverno-version: 1.6.0
-    policies.kyverno.io/minversion: 1.6.0
-    kyverno.io/kubernetes-version: "1.20"
+    kyverno.io/kyverno-version: 1.11.0
+    policies.kyverno.io/minversion: 1.11.0
+    kyverno.io/kubernetes-version: "1.26-1.27"
     policies.kyverno.io/subject: BuildConfig
     policies.kyverno.io/description: >-
       The Jenkins Pipeline Build Strategy has been deprecated. This policy prevents its use. Use OpenShift Pipelines instead.
 spec:
-  validationFailureAction: enforce
+  validationFailureAction: Enforce
   background: true
   rules:
   - name: check-build-strategy
@@ -24,11 +24,9 @@ spec:
           - v1/BuildConfig
           - build.openshift.io/v1/BuildConfig
     validate:
-      message: >-
-        Jenkins Pipeline Build Strategy has been deprecated and is not allowed
-      deny: 
-        conditions:
-          all:
-          - key: "{{ keys(request.object.spec.strategy) | contains(@, 'jenkinsPipelineStrategy') }}"
-            operator: Equals
-            value: true
+      cel:
+        expressions:
+          - expression: "!has(object.spec.strategy.jenkinsPipelineStrategy)"
+            message: >-
+              Jenkins Pipeline Build Strategy has been deprecated and is not allowed
+
