--- a/openshift-cel/disallow-security-context-constraint-anyuid/disallow-security-context-constraint-anyuid.yaml
+++ b/openshift-cel/disallow-security-context-constraint-anyuid/disallow-security-context-constraint-anyuid.yaml
@@ -3,17 +3,17 @@ kind: ClusterPolicy
 metadata:
   name: disallow-security-context-constraint-anyuid
   annotations:
-    policies.kyverno.io/title: Disallow use of the SecurityContextConstraint (SCC) anyuid
-    policies.kyverno.io/category: Security
+    policies.kyverno.io/title: Disallow use of the SecurityContextConstraint (SCC) anyuid in CEL expressions
+    policies.kyverno.io/category: Security in CEL 
     policies.kyverno.io/severity: high
-    kyverno.io/kyverno-version: 1.6.0
-    policies.kyverno.io/minversion: 1.6.0
-    kyverno.io/kubernetes-version: "1.20"
+    kyverno.io/kyverno-version: 1.11.0
+    policies.kyverno.io/minversion: 1.11.0
+    kyverno.io/kubernetes-version: "1.26-1.27"
     policies.kyverno.io/subject: Role,ClusterRole,RBAC
     policies.kyverno.io/description: >-
       Disallow the use of the SecurityContextConstraint (SCC) anyuid which allows a pod to run with the UID as declared in the image instead of a random UID
 spec:
-  validationFailureAction: enforce
+  validationFailureAction: Enforce
   background: true
   rules:
   - name: check-security-context-constraint
@@ -23,20 +23,12 @@ spec:
           kinds:
           - ClusterRole
           - Role
-    validate:
-      message: >-
-        Use of the SecurityContextConstraint (SCC) anyuid is not allowed
-      foreach:
-      - list: request.object.rules[]
-        deny:
-          conditions:
-            all:
-            - key: anyuid
-              operator: AnyIn
-              value: "{{element.resourceNames[]}}"
-            - key: "{{ element.verbs[]  | contains(@, 'use') || contains(@, '*') }}"
-              operator: Equals
-              value: true
+    validate: 
+      cel:
+        expressions:
+          - expression: "!has(object.rules) || !object.rules.exists(rule, 'anyuid' in rule.resourceNames && ('use' in rule.verbs || '*' in rule.verbs))"
+            message: >-
+              Use of the SecurityContextConstraint (SCC) anyuid is not allowed
   - name: check-security-context-roleref
     match:
       any:
@@ -45,11 +37,9 @@ spec:
           - ClusterRoleBinding
           - RoleBinding
     validate:
-      message: >-
-        Use of the SecurityContextConstraint (SCC) anyuid is not allowed
-      deny:
-        conditions:
-          all:
-          - key: system:openshift:scc:anyuid
-            operator: Equals
-            value: "{{request.object.roleRef.name}}"
+      cel:
+        expressions:
+          - expression: "object.roleRef.name != 'system:openshift:scc:anyuid'"
+            message: >-
+              Use of the SecurityContextConstraint (SCC) anyuid is not allowed
+
