--- a/openshift-cel/enforce-etcd-encryption/enforce-etcd-encryption.yaml
+++ b/openshift-cel/enforce-etcd-encryption/enforce-etcd-encryption.yaml
@@ -3,17 +3,17 @@ kind: ClusterPolicy
 metadata:
   name: enforce-etcd-encryption
   annotations:
-    policies.kyverno.io/title: Enforce etcd encryption in OpenShift
+    policies.kyverno.io/title: Enforce etcd encryption in OpenShift in CEL expressions
     policies.kyverno.io/category: OpenShift
     policies.kyverno.io/severity: high
-    kyverno.io/kyverno-version: 1.6.0
-    policies.kyverno.io/minversion: 1.6.0
-    kyverno.io/kubernetes-version: "1.20"
+    kyverno.io/kyverno-version: 1.11.0
+    policies.kyverno.io/minversion: 1.11.0
+    kyverno.io/kubernetes-version: "1.26-1.27"
     policies.kyverno.io/subject: APIServer
     policies.kyverno.io/description: >-
       Encryption at rest is a security best practice. This policy ensures encryption is enabled for etcd in OpenShift clusters.
 spec:
-  validationFailureAction: enforce
+  validationFailureAction: Enforce
   background: true
   rules:
   - name: check-etcd-encryption
@@ -23,11 +23,9 @@ spec:
           kinds:
           - config.openshift.io/v1/APIServer
     validate:
-      message: >-
-        Encryption should be enabled for etcd
-      deny: 
-        conditions:
-          all:
-          - key: "{{ keys(request.object.spec) | contains(@, 'encryption') }}"
-            operator: NotEquals
-            value: true
+      cel:
+        expressions:
+          - expression: "has(object.spec.encryption)"
+            message: >-
+              Encryption should be enabled for etcd
+
