--- a/other-cel/check-serviceaccount-secrets/.chainsaw-test/chainsaw-test.yaml
+++ b/other-cel/check-serviceaccount-secrets/.chainsaw-test/chainsaw-test.yaml
@@ -1,8 +1,11 @@
+# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
 apiVersion: chainsaw.kyverno.io/v1alpha1
 kind: Test
 metadata:
   name: check-service-accounts
 spec:
+  # disable templating because it can cause issues with CEL expressions
+  template: false
   steps:
   - name: step-01
     try:
