--- a/other-cel/deny-secret-service-account-token-type/.chainsaw-test/chainsaw-test.yaml
+++ b/other-cel/deny-secret-service-account-token-type/.chainsaw-test/chainsaw-test.yaml
@@ -5,6 +5,8 @@ metadata:
   creationTimestamp: null
   name: deny-secret-service-account-token-type
 spec:
+  # disable templating because it can cause issues with CEL expressions
+  template: false
   steps:
   - name: step-01
     try:
