--- a/other-cel/limit-hostpath-type-pv/.chainsaw-test/chainsaw-test.yaml
+++ b/other-cel/limit-hostpath-type-pv/.chainsaw-test/chainsaw-test.yaml
@@ -5,6 +5,8 @@ metadata:
   creationTimestamp: null
   name: limit-hostpath-type-pv
 spec:
+  # disable templating because it can cause issues with CEL expressions
+  template: false
   steps:
   - name: step-01
     try:
