--- a/other-cel/prevent-cr8escape/.chainsaw-test/chainsaw-test.yaml
+++ b/other-cel/prevent-cr8escape/.chainsaw-test/chainsaw-test.yaml
@@ -5,6 +5,8 @@ metadata:
   creationTimestamp: null
   name: prevent-cr8escape
 spec:
+  # disable templating because it can cause issues with CEL expressions
+  template: false
   steps:
   - name: step-01
     try:
