--- a/psp-migration-cel/check-supplemental-groups/check-supplemental-groups.yaml
+++ b/psp-migration-cel/check-supplemental-groups/check-supplemental-groups.yaml
@@ -3,12 +3,12 @@ kind: ClusterPolicy
 metadata:
   name: psp-check-supplemental-groups
   annotations:
-    policies.kyverno.io/title: Check supplementalGroups
-    policies.kyverno.io/category: PSP Migration
+    policies.kyverno.io/title: Check supplementalGroups in CEL expressions
+    policies.kyverno.io/category: PSP Migration in CEL 
     policies.kyverno.io/severity: medium
-    kyverno.io/kyverno-version: 1.6.0
-    policies.kyverno.io/minversion: 1.6.0
-    kyverno.io/kubernetes-version: "1.23"
+    kyverno.io/kyverno-version: 1.11.0
+    policies.kyverno.io/minversion: 1.11.0
+    kyverno.io/kubernetes-version: "1.26-1.27"
     policies.kyverno.io/subject: Pod
     policies.kyverno.io/description: >-
       Supplemental groups control which group IDs containers add and can coincide with
@@ -17,7 +17,7 @@ metadata:
       may only specify supplementalGroup IDs between 100-200 or 500-600.
 spec:
   background: false
-  validationFailureAction: audit
+  validationFailureAction: Audit
   rules:
   - name: supplementalgroup-ranges
     match:
@@ -25,16 +25,12 @@ spec:
       - resources:
           kinds:
             - Pod
-    preconditions:
-      all:
-      - key: "{{ request.operation || 'BACKGROUND' }}"
-        operator: AnyIn
-        value:
-        - CREATE
-        - UPDATE
     validate:
-      message: Any supplementalGroup ID must be within the range 100-200 or 500-600.
-      pattern:
-        spec:
-          =(securityContext):
-            =(supplementalGroups): 100-200 | 500-600
+      cel:
+        expressions:
+          - expression: >-
+              !has(object.spec.securityContext) ||
+              !has(object.spec.securityContext.supplementalGroups) ||
+              object.spec.securityContext.supplementalGroups.all(supplementalGroup, (supplementalGroup >= 100 && supplementalGroup <= 200) || (supplementalGroup >= 500 && supplementalGroup <= 600))
+            message: Any supplementalGroup ID must be within the range 100-200 or 500-600.
+
