--- a/psp-migration-cel/restrict-adding-capabilities/restrict-adding-capabilities.yaml
+++ b/psp-migration-cel/restrict-adding-capabilities/restrict-adding-capabilities.yaml
@@ -3,12 +3,12 @@ kind: ClusterPolicy
 metadata:
   name: psp-restrict-adding-capabilities
   annotations:
-    policies.kyverno.io/title: Restrict Adding Capabilities
-    policies.kyverno.io/category: PSP Migration
+    policies.kyverno.io/title: Restrict Adding Capabilities in CEL expressions
+    policies.kyverno.io/category: PSP Migration in CEL 
     policies.kyverno.io/severity: medium
-    kyverno.io/kyverno-version: 1.6.0
-    policies.kyverno.io/minversion: 1.6.0
-    kyverno.io/kubernetes-version: "1.23"
+    kyverno.io/kyverno-version: 1.11.0
+    policies.kyverno.io/minversion: 1.11.0
+    kyverno.io/kubernetes-version: "1.26-1.27"
     policies.kyverno.io/subject: Pod
     policies.kyverno.io/description: >-
       Adding capabilities is a way for containers in a Pod to request higher levels
@@ -18,7 +18,7 @@ metadata:
       ephemeralContainers, initContainers, and containers to ensure the only
       capabilities that can be added are either NET_BIND_SERVICE or CAP_CHOWN.
 spec:
-  validationFailureAction: audit
+  validationFailureAction: Audit
   background: true
   rules:
     - name: allowed-capabilities
@@ -27,22 +27,20 @@ spec:
         - resources:
             kinds:
               - Pod
-      preconditions:
-        all:
-        - key: "{{ request.operation || 'BACKGROUND' }}"
-          operator: NotEquals
-          value: DELETE
       validate:
-        message: >-
-          Any capabilities added other than NET_BIND_SERVICE or CAP_CHOWN are disallowed.
-        foreach:
-          - list: request.object.spec.[ephemeralContainers, initContainers, containers][]
-            deny:
-              conditions:
-                all:
-                - key: "{{ element.securityContext.capabilities.add[] || '' }}"
-                  operator: AnyNotIn
-                  value:
-                  - NET_BIND_SERVICE
-                  - CAP_CHOWN
-                  - ''
+        cel:
+          variables:
+          - name: allContainers
+            expression: "(object.spec.containers + (has(object.spec.initContainers) ? object.spec.initContainers : []) + (has(object.spec.ephemeralContainers) ? object.spec.ephemeralContainers : []))"
+          - name: allowedCapabilities
+            expression: "['NET_BIND_SERVICE', 'CAP_CHOWN']"
+          expressions:
+            - expression: >-
+                variables.allContainers.all(container, 
+                !has(container.securityContext) ||
+                !has(container.securityContext.capabilities) ||
+                !has(container.securityContext.capabilities.add) ||
+                container.securityContext.capabilities.add.all(capability, capability in variables.allowedCapabilities))
+              message: >-
+                Any capabilities added other than NET_BIND_SERVICE or CAP_CHOWN are disallowed.
+
