--- a/tekton-cel/block-tekton-task-runs/block-tekton-task-runs.yaml
+++ b/tekton-cel/block-tekton-task-runs/block-tekton-task-runs.yaml
@@ -3,17 +3,17 @@ kind: ClusterPolicy
 metadata:
   name: block-tekton-task-runs
   annotations:
-    policies.kyverno.io/title: Block Tekton TaskRun
-    policies.kyverno.io/category: Tekton
+    policies.kyverno.io/title: Block Tekton TaskRun in CEL expressions
+    policies.kyverno.io/category: Tekton in CEL 
     policies.kyverno.io/severity: medium
     policies.kyverno.io/subject: TaskRun
-    kyverno.io/kyverno-version: 1.7.1
-    policies.kyverno.io/minversion: 1.6.0
-    kyverno.io/kubernetes-version: "1.23"
+    kyverno.io/kyverno-version: 1.11.0
+    policies.kyverno.io/minversion: 1.11.0
+    kyverno.io/kubernetes-version: "1.26-1.27"
     policies.kyverno.io/description: >-
       Restrict creation of TaskRun resources to the Tekton pipelines controller.
 spec:
-  validationFailureAction: audit
+  validationFailureAction: Audit
   background: false
   rules:
   - name: check-taskrun-user
@@ -27,13 +27,9 @@ spec:
       - subjects:
         - kind: User 
           name: "system:serviceaccount:tekton-pipelines:tekton-pipelines-controller"
-    preconditions:
-      all:
-      - key: "{{ request.operation || 'BACKGROUND' }}"
-        operator: AnyIn
-        value:
-        - CREATE
-        - UPDATE
     validate:
-      message: Creating a TaskRun is not allowed.
-      deny: {}
+      cel:
+        expressions:
+          - expression: "false"
+            message: Creating a TaskRun is not allowed.
+
