--- a/tekton-cel/require-tekton-bundle/require-tekton-bundle.yaml
+++ b/tekton-cel/require-tekton-bundle/require-tekton-bundle.yaml
@@ -3,17 +3,17 @@ kind: ClusterPolicy
 metadata:
   name: require-tekton-bundle
   annotations:
-    policies.kyverno.io/title: Require Tekton Bundle
-    policies.kyverno.io/category: Tekton
+    policies.kyverno.io/title: Require Tekton Bundle in CEL expressions
+    policies.kyverno.io/category: Tekton in CEL 
     policies.kyverno.io/severity: medium
     policies.kyverno.io/subject: TaskRun, PipelineRun
-    kyverno.io/kyverno-version: 1.7.1
-    policies.kyverno.io/minversion: 1.6.0
-    kyverno.io/kubernetes-version: "1.23"
+    kyverno.io/kyverno-version: 1.11.0
+    policies.kyverno.io/minversion: 1.11.0
+    kyverno.io/kubernetes-version: "1.26-1.27"
     policies.kyverno.io/description: >-
       PipelineRun and TaskRun resources must be executed from a bundle
 spec:
-  validationFailureAction: audit
+  validationFailureAction: Audit
   background: true
   rules:
   - name: check-bundle-pipelinerun
@@ -23,11 +23,10 @@ spec:
           kinds:
           - PipelineRun
     validate:
-      message: "A bundle is required."
-      pattern:
-        spec:
-          pipelineRef:
-            bundle: "?*"
+      cel:
+        expressions:
+          - expression: "has(object.spec.pipelineRef) && has(object.spec.pipelineRef.bundle) && object.spec.pipelineRef.bundle != ''"
+            message: "A bundle is required."
   - name: check-bundle-taskrun
     match:
       any:
@@ -35,8 +34,8 @@ spec:
           kinds:
           - TaskRun
     validate:
-      message: "A bundle is required."
-      pattern:
-        spec:
-          taskRef:
-            bundle: "?*"
+      cel:
+        expressions:
+          - expression: "has(object.spec.taskRef) && has(object.spec.taskRef.bundle) && object.spec.taskRef.bundle != ''"
+            message: "A bundle is required."
+
