--- a/tekton-cel/require-tekton-namespace-pipelinerun/require-tekton-namespace-pipelinerun.yaml
+++ b/tekton-cel/require-tekton-namespace-pipelinerun/require-tekton-namespace-pipelinerun.yaml
@@ -3,17 +3,16 @@ kind: ClusterPolicy
 metadata:
   name: require-tekton-namespace-pipelinerun
   annotations:
-    policies.kyverno.io/title: Require Namespace for Tekton PipelineRun
-    policies.kyverno.io/category: Tekton
+    policies.kyverno.io/title: Require Namespace for Tekton PipelineRun in CEL expressions
+    policies.kyverno.io/category: Tekton in CEL 
     policies.kyverno.io/severity: medium
     policies.kyverno.io/subject: PipelineRun
-    kyverno.io/kyverno-version: 1.7.2
-    policies.kyverno.io/minversion: 1.7.0
-    kyverno.io/kubernetes-version: "1.23"
+    kyverno.io/kyverno-version: 1.12.1
+    kyverno.io/kubernetes-version: "1.26-1.27"
     policies.kyverno.io/description: >- 
       A Namespace is required for a PipelineRun and may not be set to `default`.
 spec:
-  validationFailureAction: audit
+  validationFailureAction: Audit
   background: true
   rules:
   - name: check-pipelinerun-namespace
@@ -22,13 +21,12 @@ spec:
       - resources:
           kinds:
           - PipelineRun
-    preconditions:
-      all:
-      - key: "{{ request.operation || 'BACKGROUND' }}"
-        operator: Equals
-        value: CREATE
+    celPreconditions:
+      - name: "operation-should-be-create"
+        expression: "request.operation == 'CREATE'"
     validate:
-      message: "A namespace is required and may not be set to default."
-      pattern:
-        metadata:
-          namespace: "!default"
+      cel:
+        expressions:
+          - expression: "namespaceObject.metadata.name != 'default'"
+            message: "A namespace is required and may not be set to default."
+
