--- a/other/copy-namespace-labels/.chainsaw-test/chainsaw-test.yaml
+++ b/other/copy-namespace-labels/.chainsaw-test/chainsaw-test.yaml
@@ -23,7 +23,6 @@ spec:
           apiVersion: apps/v1
           kind: Deployment
           metadata:
-            namespace: within-ns
+            namespace: "within-ns"
             labels:
               kubernetes.io/metadata.name: within-ns
-          
