--- a/other/require-image-checksum/require-image-checksum.yaml
+++ b/other/require-image-checksum/require-image-checksum.yaml
@@ -9,11 +9,9 @@ metadata:
     policies.kyverno.io/subject: Pod
     policies.kyverno.io/minversion: 1.6.0
     policies.kyverno.io/description: >-
-      Use of a SHA checksum when pulling an image is often preferable because tags
-      are mutable and can be overwritten. This policy checks to ensure that all images
-      use SHA checksums rather than tags.
+      Use of a SHA checksum when pulling an image is often preferable because tags are mutable and can be overwritten. This policy checks to ensure that all images use SHA checksums rather than tags.
 spec:
-  validationFailureAction: audit
+  validationFailureAction: Audit
   background: true
   rules:
   - name: require-image-checksum
@@ -27,4 +25,8 @@ spec:
       pattern:
         spec:
           containers:
+          - image: "*@*"
+          =(ephemeralContainers):
+          - image: "*@*"
+          =(initContainers):
           - image: "*@*"
