--- a/pod-security/mutate/set-privilege-escalation/set-privilege-escalation.yaml
+++ b/pod-security/mutate/set-privilege-escalation/set-privilege-escalation.yaml
@@ -7,11 +7,11 @@ metadata:
     policies.kyverno.io/category: Pod Security Standards (Mutate)
     policies.kyverno.io/severity: medium
     policies.kyverno.io/subject: Pod
-    kyverno.io/kyverno-version: 1.6.0
-    kyverno.io/kubernetes-version: "1.22-1.30"
+    kyverno.io/kyverno-version: 1.12.5
+    kyverno.io/kubernetes-version: "1.30"
     policies.kyverno.io/description: >-
       Privilege escalation, such as via set-user-ID or set-group-ID file mode, should not be allowed.
-      This policy ensures the `allowPrivilegeEscalation` field is set to `false`.
+      This policy set the `allowPrivilegeEscalation` field to `false` if it's set to `true`.
 spec:
   validationFailureAction: Audit
   background: true
