--- a/pod-security/mutate/set-run-as-non-root/set-run-as-non-root.yaml
+++ b/pod-security/mutate/set-run-as-non-root/set-run-as-non-root.yaml
@@ -7,11 +7,11 @@ metadata:
     policies.kyverno.io/category: Pod Security Standards (Mutate)
     policies.kyverno.io/severity: medium
     policies.kyverno.io/subject: Pod
-    kyverno.io/kyverno-version: 1.6.0
-    kyverno.io/kubernetes-version: "1.22-1.30"
+    kyverno.io/kyverno-version: 1.12.5
+    kyverno.io/kubernetes-version: "1.30"
     policies.kyverno.io/description: >-
-      Containers must be required to run as non-root users. This policy ensures
-      `runAsNonRoot` is set to `true`.
+      Containers must be required to run as non-root users. This policy sets
+      `runAsNonRoot` is set to `true` if it's set to `false`.
 spec:
   validationFailureAction: Audit
   background: true
