--- a/best-practices/disallow-helm-tiller/.chainsaw-test/good-pod.yaml
+++ b/best-practices/disallow-helm-tiller/.chainsaw-test/good-pod.yaml
@@ -9,7 +9,7 @@ spec:
   - name: nothelmbox
     image: busybox:v1.35
   initContainers:
-  - name: busybox
+  - name: busyboxinit
     image: busybox:v1.35
-  - name: nothelmbox
+  - name: nothelmboxinit
     image: busybox:v1.35
