--- a/best-practices/disallow-helm-tiller/.chainsaw-test/good-deploy.yaml
+++ b/best-practices/disallow-helm-tiller/.chainsaw-test/good-deploy.yaml
@@ -20,5 +20,5 @@ spec:
         command: ["sleep", "3600"]
       initContainers:
       - image: busybox:v1.35
-        name: busybox
+        name: busyboxinit
         command: ["sleep", "3600"]
